# python-fastapi-starter

./: .gitignore  .gitmessage  CHANGELOG.md  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: build-and-publish-container.yml  release.yml
db/: schema.sql  seed.sql
src/python_fastapi_starter/: cli.py
src/python_fastapi_starter/api/: app.py  main.py
tests/: test_main.py
